# pancake

./: .gitignore  CHANGELOG.md  Makefile  README.md  bamboo_build.sh  bamboo_build_gpu.sh  meson.build  meson_options.txt
include/: meson.build
include/lib/flat_hash_map/: flat_hash_map.hpp
include/lib/intervaltree/: IntervalTree.h
include/lib/istl/: lis.hpp
include/lib/ksw2/: ksw2.h
include/lib/sparsehash/: type_traits.h
include/pacbio/: Version.h
include/pacbio/alignment/: AlignmentTools.h  DiffCounts.h  Ses2AlignBanded.hpp  Ses2DistanceBanded.hpp  SesAlignBanded.hpp  SesDistanceBanded.h  SesOptions.h  SesResults.h
include/pacbio/overlaphifi/: Mapper.h  Overlap.h  OverlapHifiSettings.h  OverlapWriter.h  OverlapWriterBase.h  OverlapWriterFactory.h  OverlapWriterFormat.h  OverlapWriterIPAOvl.h  OverlapWriterM4.h  OverlapWriterPAF.h  OverlapWriterSAM.h  Secondary.h  SeedHit.h  SeedIndex.h
include/pacbio/pancake/: AlignerBase.h  AlignerBatchBase.h  AlignerBatchCPU.h  AlignerBatchGPU.h  AlignerBatchGPUGenomeWorksInterface.h  AlignerEdlib.h  AlignerFactory.h  AlignerKSW2.h  AlignerSES1.h  AlignerSES2.h  AlignerWFA.h  AlignmentParameters.h  AlignmentResult.h  AlignmentSeeded.h  CompressedSequence.h  ContiguousFilePart.h  DPChain.h  FastaSequenceCached.h  FastaSequenceCachedStore.h  Lookups.h  MapperBase.h  MapperBatch.h  MapperBatchBase.h  MapperBatchCPU.h  MapperBatchGPU.h  MapperBatchUtility.h  MapperCLR.h  MapperHiFi.h  MapperUtility.h  Minimizers.h  Overlap.h  OverlapWriterBase.h  OverlapWriterFactory.h  OverlapWriterFormat.h  OverlapWriterIPAOvl.h  OverlapWriterM4.h  OverlapWriterPAF.h  OverlapWriterSAM.h  Pancake.h  Secondary.h  (+22 more)
include/pacbio/seeddb/: Minimizers.h  Seed.h  SeedDBIndexCache.h  SeedDBParameters.h  SeedDBReader.h  SeedDBReaderCached.h  SeedDBReaderCachedBlock.h  SeedDBReaderRawBlock.h  SeedDBWriter.h  SequenceSeeds.h  SequenceSeedsCached.h
include/pacbio/seqdb/: CompressedSequence.h  FastaSequenceCached.h  FastaSequenceId.h  Lookups.h  Range.h  SeqDBCache.h  SeqDBIndexCache.h  SeqDBReader.h  SeqDBReaderBase.h  SeqDBReaderCached.h  SeqDBReaderCachedBlock.h  SeqDBWriter.h  SeqDBWriterBase.h  SeqDBWriterCompressed.h  Twobit.h  Util.h
include/pacbio/util/: CommonTypes.h  Conversion.h  FileIO.h  GenomicUnit.h  RunLengthEncoding.h  SeqLengthStats.h  TicToc.h  Util.h
src/: Pancake.cpp  PancakeGitHash.cpp.in  PancakeVersion.cpp.in  Settings.cpp  meson.build
src/alignment/: AlignmentTools.cpp  SesDistanceBanded.cpp
src/dbfilter/: DBFilterSettings.h  DBFilterWorkflow.cpp
src/lib/ksw2/: kalloc.cpp  ksw2_dispatch.cpp  ksw2_extd2_sse.cpp  ksw2_exts2_sse.cpp  ksw2_extz2_sse.cpp  ksw2_ll_sse.cpp
src/lib/wfa/: affine_penalties.cpp  affine_table.cpp  affine_wavefront.cpp  affine_wavefront_align.cpp  affine_wavefront_backtrace.cpp  affine_wavefront_display.cpp  affine_wavefront_extend.cpp  affine_wavefront_penalties.cpp  affine_wavefront_reduction.cpp  affine_wavefront_utils.cpp  commons.cpp  dna_text.cpp  edit_cigar.cpp  edit_dp.cpp  edit_table.cpp  mm_allocator.cpp  nw.cpp  profiler_counter.cpp  profiler_timer.cpp  swg.cpp  (+3 more)
src/main/: Workflow.cpp  Workflow.h  main.cpp
src/overlaphifi/: Mapper.cpp  Overlap.cpp  OverlapHifiSettings.cpp  OverlapHifiSettings.h  OverlapHifiWorkflow.cpp  OverlapHifiWorkflow.h  OverlapWriter.cpp  OverlapWriterBase.cpp  OverlapWriterFactory.cpp  OverlapWriterIPAOvl.cpp  OverlapWriterM4.cpp  OverlapWriterPAF.cpp  OverlapWriterSAM.cpp  Secondary.cpp  SeedIndex.cpp
src/pancake/: AlignerBase.cpp  AlignerBatchCPU.cpp  AlignerBatchGPU.cpp  AlignerBatchGPUGenomeWorksInterface.cu  AlignerEdlib.cpp  AlignerFactory.cpp  AlignerKSW2.cpp  AlignerSES1.cpp  AlignerSES2.cpp  AlignerWFA.cpp  AlignmentSeeded.cpp  CompressedSequence.cpp  DPChain.cpp  FastaSequenceId.cpp  MapperBatch.cpp  MapperBatchCPU.cpp  MapperBatchGPU.cpp  MapperBatchUtility.cpp  MapperCLR.cpp  MapperHiFi.cpp  MapperUtility.cpp  Minimizers.cpp  Overlap.cpp  OverlapWriterBase.cpp  OverlapWriterFactory.cpp  OverlapWriterIPAOvl.cpp  OverlapWriterM4.cpp  OverlapWriterPAF.cpp  OverlapWriterSAM.cpp  Secondary.cpp  SeedDBIndexCache.cpp  SeedDBReader.cpp  SeedDBReaderCached.cpp  SeedDBReaderCachedBlock.cpp  SeedDBReaderRawBlock.cpp  SeedDBWriter.cpp  SeedHit.cpp  SeedHitWriter.cpp  SeedIndex.cpp  SeqDBIndexCache.cpp  (+7 more)
src/seeddb/: Minimizers.cpp  SeedDBIndexCache.cpp  SeedDBReader.cpp  SeedDBReaderCached.cpp  SeedDBReaderCachedBlock.cpp  SeedDBReaderRawBlock.cpp  SeedDBSettings.cpp  SeedDBSettings.h  SeedDBWorkflow.cpp  SeedDBWriter.cpp  SequenceSeeds.cpp  SequenceSeedsCached.cpp
src/seqdb/: CompressedSequence.cpp  FastaSequenceId.cpp  SeqDBIndexCache.cpp  SeqDBReader.cpp  SeqDBReaderCached.cpp  SeqDBReaderCachedBlock.cpp  SeqDBSettings.cpp  SeqDBSettings.h  SeqDBWorkflow.cpp  SeqDBWriter.cpp  SeqDBWriterCompressed.cpp  Twobit.cpp
src/seqfetch/: SeqFetchSettings.cpp  SeqFetchSettings.h  SeqFetchWorkflow.cpp  SeqFetchWorkflow.h
src/util/: FileIO.cpp  RunLengthEncoding.cpp  SeqLengthStats.cpp  TicToc.cpp
tests/: meson.build
tests/cram/: test_bugfixes.t  test_hifi_ovl.t  test_hifi_ovl_mapping.t  test_robustness.t  test_seeddb_writer.t  test_seqdb_dump.t  test_seqdb_filter.t  test_seqdb_info.t  test_seqdb_writer.t  test_seqfetch.t
tests/include/: PancakeTestData.h.in
tests/src/: TestHelperUtils.cpp  TestHelperUtils.h  test_AlignerBatchCPU.cpp  test_AlignerBatchGPU.cpp  test_AlignmentSeeded.cpp  test_AlignmentTools.cpp  test_DPChain.cpp  test_FastaSequenceCachedStore.cpp  test_FileIO.cpp  test_LIS.cpp  test_MapperBatch.cpp  test_MapperBatchCPU.cpp  test_MapperBatchGPU.cpp  test_MapperCLR.cpp  test_MapperHiFi.cpp  test_Minimizers.cpp  test_Overlap.cpp  test_Pancake.cpp  test_RunLengthEncoding.cpp  test_Secondary.cpp  test_SeedDBReader.cpp  test_SeedDBReaderCached.cpp  test_SeedDBReaderCachedBlock.cpp  test_SeedDBReaderRawBlock.cpp  test_SeedIndex.cpp  test_SeqDBReader.cpp  test_SeqDBReaderCached.cpp  test_SeqDBReaderCachedBlock.cpp  test_Ses2AlignBanded.cpp  test_Ses2DistanceBanded.cpp  test_SesAlignBanded.cpp  test_SesDistanceBanded.cpp  test_Twobit.cpp  test_Util.cpp
(+242 files in other folders)
